--- a/html/index.html
+++ b/html/index.html
@@ -71,5 +71,8 @@
       <h5>testh5</h5>
       <h6>testh6</h6>
     </hgroup>
+    <section>
+        just test section
+    </section>
   </body>
 </html>
