--- a/html/index.html
+++ b/html/index.html
@@ -91,6 +91,26 @@
 	test footer
 	<address>
         </address>
-    </footer>    
+    </footer>  
+    <table>
+      <caption>test table</caption>
+      <thead>
+      <tr>
+        <th id="test">test</th>
+        <th>test2</th>
+        <th header="test test">test3</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr>
+        <td colspan="2">test4</td>
+        <td>test5</td>
+        <td>test6</td>
+      </tr>
+      </tbody>
+      <tfoot>
+        <td rowspan="2" >test7</td>
+      </tfoot>
+    </table>  
   </body>
 </html>
